# arc

./: .gitignore  Makefile  README.md  pyproject.toml
arc/: __init__.py
arc/cli/: __main__.py
arc/core/: __init__.py  letters.py
arc/crypto/: encrypt.py
arc/email/: sender.py
arc/utils/: editor.py
